Pass the whole form to the form mapping

--- a/modules/simple_forms_api/app/form_mappings/vba_21_0966.json.erb
+++ b/modules/simple_forms_api/app/form_mappings/vba_21_0966.json.erb
@@ -1,66 +1,66 @@
 {
-  "F[0].Page_1[0].DOB_Month[0]": "<%= data['veteran_date_of_birth']&.[](5..6) %>",
-  "F[0].Page_1[0].DOB_Day[0]": "<%= data['veteran_date_of_birth']&.[](8..9) %>",
-  "F[0].Page_1[0].DOB_Year[0]": "<%= data['veteran_date_of_birth']&.[](0..3) %>",
-  "F[0].Page_1[0].Veterans_Social_SecurityNumber_FirstThreeNumbers[0]": "<%= data.dig('veteran_id', 'ssn')&.[](0..2) %>",
-  "F[0].Page_1[0].Veterans_Social_SecurityNumber_SecondTwoNumbers[0]": "<%= data.dig('veteran_id', 'ssn')&.[](3..4) %>",
-  "F[0].Page_1[0].VeteransSocialSecurityNumber_LastFourNumbers[0]": "<%= data.dig('veteran_id', 'ssn')&.[](5..8) %>",
-  "F[0].Page_1[0].VA_File_Number[0]": "<%= data.dig('veteran_id', 'va_file_number') %>",
-  "F[0].Page_1[0].Mailing_Address_NumberAndStreet[0]": "<%= data.dig('veteran_mailing_address', 'street') %>",
-  "F[0].Page_1[0].Mailing_Address_ApartmentOrUnitNumber[0]": "<%= data.dig('veteran_mailing_address', 'street2') %>",
-  "F[0].Page_1[0].MailingAddress_City[0]": "<%= data.dig('veteran_mailing_address', 'city') %>",
-  "F[0].Page_1[0].MailingAddress_StateOrProvince[0]": "<%= data.dig('veteran_mailing_address', 'state') %>",
-  "F[0].Page_1[0].MailingAddress_Country[0]": "<%= data.dig('veteran_mailing_address', 'country') %>",
-  "F[0].Page_1[0].MailingAddress_ZIPOrPostalCode_FirstFiveNumbers[0]": "<%= data.dig('veteran_mailing_address', 'postal_code')&.[](0..4) %>",
-  "F[0].Page_1[0].MailingAddress_ZIPOrPostalCode_LastFourNumbers[0]": "<%= data.dig('veteran_mailing_address', 'postal_code')&.[](5..8) %>",
-  "F[0].Page_1[0].Veterans_First_Name[0]": "<%= data.dig('veteran_full_name', 'first') %>",
-  "F[0].Page_1[0].Veterans_Last_Name[0]": "<%= data.dig('veteran_full_name', 'last') %>",
-  "F[0].Page_1[0].Veterans_Middle_Initial1[0]": "<%= data.dig('veteran_full_name', 'middle') %>",
+  "F[0].Page_1[0].DOB_Month[0]": "<%= form.data['veteran_date_of_birth']&.[](5..6) %>",
+  "F[0].Page_1[0].DOB_Day[0]": "<%= form.data['veteran_date_of_birth']&.[](8..9) %>",
+  "F[0].Page_1[0].DOB_Year[0]": "<%= form.data['veteran_date_of_birth']&.[](0..3) %>",
+  "F[0].Page_1[0].Veterans_Social_SecurityNumber_FirstThreeNumbers[0]": "<%= form.data.dig('veteran_id', 'ssn')&.[](0..2) %>",
+  "F[0].Page_1[0].Veterans_Social_SecurityNumber_SecondTwoNumbers[0]": "<%= form.data.dig('veteran_id', 'ssn')&.[](3..4) %>",
+  "F[0].Page_1[0].VeteransSocialSecurityNumber_LastFourNumbers[0]": "<%= form.data.dig('veteran_id', 'ssn')&.[](5..8) %>",
+  "F[0].Page_1[0].VA_File_Number[0]": "<%= form.data.dig('veteran_id', 'va_file_number') %>",
+  "F[0].Page_1[0].Mailing_Address_NumberAndStreet[0]": "<%= form.data.dig('veteran_mailing_address', 'street') %>",
+  "F[0].Page_1[0].Mailing_Address_ApartmentOrUnitNumber[0]": "<%= form.data.dig('veteran_mailing_address', 'street2') %>",
+  "F[0].Page_1[0].MailingAddress_City[0]": "<%= form.data.dig('veteran_mailing_address', 'city') %>",
+  "F[0].Page_1[0].MailingAddress_StateOrProvince[0]": "<%= form.data.dig('veteran_mailing_address', 'state') %>",
+  "F[0].Page_1[0].MailingAddress_Country[0]": "<%= form.data.dig('veteran_mailing_address', 'country') %>",
+  "F[0].Page_1[0].MailingAddress_ZIPOrPostalCode_FirstFiveNumbers[0]": "<%= form.data.dig('veteran_mailing_address', 'postal_code')&.[](0..4) %>",
+  "F[0].Page_1[0].MailingAddress_ZIPOrPostalCode_LastFourNumbers[0]": "<%= form.data.dig('veteran_mailing_address', 'postal_code')&.[](5..8) %>",
+  "F[0].Page_1[0].Veterans_First_Name[0]": "<%= form.data.dig('veteran_full_name', 'first') %>",
+  "F[0].Page_1[0].Veterans_Last_Name[0]": "<%= form.data.dig('veteran_full_name', 'last') %>",
+  "F[0].Page_1[0].Veterans_Middle_Initial1[0]": "<%= form.data.dig('veteran_full_name', 'middle') %>",
   "F[0].Page_1[0].Veterans_Service_Number[0]": "",
-  "F[0].Page_1[0].International_Phone_Number[0]": "<%= data['veteran_international_phone'] %>",
-  "F[0].Page_1[0].Telephone_Number_LastFourNumbers[0]": "<%= data['veteran_phone']&.[](6..9) %>",
-  "F[0].Page_1[0].Telephone_Number_SecondThreeNumbers[0]": "<%= data['veteran_phone']&.[](3..5) %>",
-  "F[0].Page_1[0].Telephone_Number_FirstThreeNumbers[0]": "<%= data['veteran_phone']&.[](0..2) %>",
-  "F[0].Page_1[0].EMAIL_ADDRESS[0]": "<%= data['veteran_email']&.[](20..29) %>",
-  "F[0].Page_1[0].EMAIL_ADDRESS[1]": "<%= data['veteran_email']&.[](0..19) %>",
-  "F[0].Page_1[0].CheckBox1[0]": "<%= data['veteran_email'] ? 1 : 0 %>",
+  "F[0].Page_1[0].International_Phone_Number[0]": "<%= form.data['veteran_international_phone'] %>",
+  "F[0].Page_1[0].Telephone_Number_LastFourNumbers[0]": "<%= form.data['veteran_phone']&.[](6..9) %>",
+  "F[0].Page_1[0].Telephone_Number_SecondThreeNumbers[0]": "<%= form.data['veteran_phone']&.[](3..5) %>",
+  "F[0].Page_1[0].Telephone_Number_FirstThreeNumbers[0]": "<%= form.data['veteran_phone']&.[](0..2) %>",
+  "F[0].Page_1[0].EMAIL_ADDRESS[0]": "<%= form.data['veteran_email']&.[](20..29) %>",
+  "F[0].Page_1[0].EMAIL_ADDRESS[1]": "<%= form.data['veteran_email']&.[](0..19) %>",
+  "F[0].Page_1[0].CheckBox1[0]": "<%= form.data['veteran_email'] ? 1 : 0 %>",
 
-  "F[0].Page_1[0].ClaimantsLastName[0]": "<%= data.dig('surviving_dependent_full_name', 'last') %>",
-  "F[0].Page_1[0].ClaimantsMiddleInitial1[0]": "<%= data.dig('surviving_dependent_full_name', 'middle') %>",
-  "F[0].Page_1[0].ClaimantsFirstName[0]": "<%= data.dig('surviving_dependent_full_name', 'first') %>",
-  "F[0].Page_1[0].ClaimantsSocialSecurityNumber_LastFourNumbers[0]": "<%= data.dig('surviving_dependent_id', 'ssn')&.[](5..8) %>",
-  "F[0].Page_1[0].ClaimantsSocialSecurityNumber_SecondTwoNumbers[0]": "<%= data.dig('surviving_dependent_id', 'ssn')&.[](3..4) %>",
-  "F[0].Page_1[0].ClaimantsSocialSecurityNumber_FirstThreeNumbers[0]": "<%= data.dig('surviving_dependent_id', 'ssn')&.[](0..2) %>",
-  "F[0].Page_1[0].RadioButtonList[0]": "<%= data.dig('surviving_dependent_id', 'va_file_number') ? 1 : 2 %>",
-  "F[0].Page_1[0].VA_File_Number[1]": "<%= data.dig('surviving_dependent_id', 'va_file_number') || '' %>",
-  "F[0].Page_1[0].RadioButtonList[1]": "<%= ['', 'spouse', 'child']&.find_index(data.dig('relationship_to_veteran', 'relationship_to_veteran')) %>",
-  "F[0].Page_1[0].RelationshipToVeteranOther_Specify[0]": "<%= ['parent', 'executor', 'other'].include?(data.dig('relationship_to_veteran', 'relationship_to_veteran')) ? data.dig('relationship_to_veteran', 'relationship_to_veteran') : '' %>",
-  "F[0].Page_1[0].Mailing_Address_ZIPOrPostalCode_LastFourNumbers[0]": "<%= data.dig('surviving_dependent_mailing_address', 'postal_code')&.[](5..8) %>",
-  "F[0].Page_1[0].Mailing_Address_ZIPOrPostalCode_FirstFiveNumbers[0]": "<%= data.dig('surviving_dependent_mailing_address', 'postal_code')&.[](0..4) %>",
-  "F[0].Page_1[0].Mailing_Address_Country[0]": "<%= data.dig('surviving_dependent_mailing_address', 'country') %>",
-  "F[0].Page_1[0].Mailing_Address_StateOrProvince[0]": "<%= data.dig('surviving_dependent_mailing_address', 'state') %>",
-  "F[0].Page_1[0].Mailing_Address_City[0]": "<%= data.dig('surviving_dependent_mailing_address', 'city') %>",
-  "F[0].Page_1[0].Mailing_Address_ApartmentOrUnitNumber[1]": "<%= data.dig('surviving_dependent_mailing_address', 'street2') %>",
-  "F[0].Page_1[0].Mailing_Address_NumberAndStreet[1]": "<%= data.dig('surviving_dependent_mailing_address', 'street') %>",
-  "F[0].Page_1[0].ClaimantsInternational_Phone_Number[0]": "<%= data['surviving_dependent_international_phone'] %>",
-  "F[0].Page_1[0].Telephone_Number_LastFourNumbers[1]": "<%= data['surviving_dependent_phone']&.[](6..9) %>",
-  "F[0].Page_1[0].Telephone_Number_SecondThreeNumbers[1]": "<%= data['surviving_dependent_phone']&.[](3..5) %>",
-  "F[0].Page_1[0].Telephone_Number_FirstThreeNumbers[1]": "<%= data['surviving_dependent_phone']&.[](0..2) %>",
-  "F[0].Page_1[0].ClaimantsEMAIL_ADDRESS[0]": "<%= data['surviving_dependent_email']&.[](20..29) %>",
-  "F[0].Page_1[0].ClaimantsEMAIL_ADDRESS[1]": "<%= data['surviving_dependent_email']&.[](0..19) %>",
-  "F[0].Page_1[0].CheckBox1[1]": "<%= data['surviving_dependent_email'] ? 1 : 0 %>",
-  "F[0].Page_1[0].DOB_Month[1]": "<%= data['surviving_dependent_date_of_birth']&.[](5..6) %>",
-  "F[0].Page_1[0].DOB_Day[1]": "<%= data['surviving_dependent_date_of_birth']&.[](8..9) %>",
-  "F[0].Page_1[0].DOB_Year[1]": "<%= data['surviving_dependent_date_of_birth']&.[](0..4) %>",
-  "F[0].Page_1[0].RadioButtonList[2]": "<%= data.dig('veteran_id', 'va_file_number') ? 1 : 2 %>",
+  "F[0].Page_1[0].ClaimantsLastName[0]": "<%= form.data.dig('surviving_dependent_full_name', 'last') %>",
+  "F[0].Page_1[0].ClaimantsMiddleInitial1[0]": "<%= form.data.dig('surviving_dependent_full_name', 'middle') %>",
+  "F[0].Page_1[0].ClaimantsFirstName[0]": "<%= form.data.dig('surviving_dependent_full_name', 'first') %>",
+  "F[0].Page_1[0].ClaimantsSocialSecurityNumber_LastFourNumbers[0]": "<%= form.data.dig('surviving_dependent_id', 'ssn')&.[](5..8) %>",
+  "F[0].Page_1[0].ClaimantsSocialSecurityNumber_SecondTwoNumbers[0]": "<%= form.data.dig('surviving_dependent_id', 'ssn')&.[](3..4) %>",
+  "F[0].Page_1[0].ClaimantsSocialSecurityNumber_FirstThreeNumbers[0]": "<%= form.data.dig('surviving_dependent_id', 'ssn')&.[](0..2) %>",
+  "F[0].Page_1[0].RadioButtonList[0]": "<%= form.data.dig('surviving_dependent_id', 'va_file_number') ? 1 : 2 %>",
+  "F[0].Page_1[0].VA_File_Number[1]": "<%= form.data.dig('surviving_dependent_id', 'va_file_number') || '' %>",
+  "F[0].Page_1[0].RadioButtonList[1]": "<%= form.relationship_to_veteran_radio %>",
+  "F[0].Page_1[0].RelationshipToVeteranOther_Specify[0]": "<%= form.relationship_to_veteran %>",
+  "F[0].Page_1[0].Mailing_Address_ZIPOrPostalCode_LastFourNumbers[0]": "<%= form.data.dig('surviving_dependent_mailing_address', 'postal_code')&.[](5..8) %>",
+  "F[0].Page_1[0].Mailing_Address_ZIPOrPostalCode_FirstFiveNumbers[0]": "<%= form.data.dig('surviving_dependent_mailing_address', 'postal_code')&.[](0..4) %>",
+  "F[0].Page_1[0].Mailing_Address_Country[0]": "<%= form.data.dig('surviving_dependent_mailing_address', 'country') %>",
+  "F[0].Page_1[0].Mailing_Address_StateOrProvince[0]": "<%= form.data.dig('surviving_dependent_mailing_address', 'state') %>",
+  "F[0].Page_1[0].Mailing_Address_City[0]": "<%= form.data.dig('surviving_dependent_mailing_address', 'city') %>",
+  "F[0].Page_1[0].Mailing_Address_ApartmentOrUnitNumber[1]": "<%= form.data.dig('surviving_dependent_mailing_address', 'street2') %>",
+  "F[0].Page_1[0].Mailing_Address_NumberAndStreet[1]": "<%= form.data.dig('surviving_dependent_mailing_address', 'street') %>",
+  "F[0].Page_1[0].ClaimantsInternational_Phone_Number[0]": "<%= form.data['surviving_dependent_international_phone'] %>",
+  "F[0].Page_1[0].Telephone_Number_LastFourNumbers[1]": "<%= form.data['surviving_dependent_phone']&.[](6..9) %>",
+  "F[0].Page_1[0].Telephone_Number_SecondThreeNumbers[1]": "<%= form.data['surviving_dependent_phone']&.[](3..5) %>",
+  "F[0].Page_1[0].Telephone_Number_FirstThreeNumbers[1]": "<%= form.data['surviving_dependent_phone']&.[](0..2) %>",
+  "F[0].Page_1[0].ClaimantsEMAIL_ADDRESS[0]": "<%= form.data['surviving_dependent_email']&.[](20..29) %>",
+  "F[0].Page_1[0].ClaimantsEMAIL_ADDRESS[1]": "<%= form.data['surviving_dependent_email']&.[](0..19) %>",
+  "F[0].Page_1[0].CheckBox1[1]": "<%= form.data['surviving_dependent_email'] ? 1 : 0 %>",
+  "F[0].Page_1[0].DOB_Month[1]": "<%= form.data['surviving_dependent_date_of_birth']&.[](5..6) %>",
+  "F[0].Page_1[0].DOB_Day[1]": "<%= form.data['surviving_dependent_date_of_birth']&.[](8..9) %>",
+  "F[0].Page_1[0].DOB_Year[1]": "<%= form.data['surviving_dependent_date_of_birth']&.[](0..4) %>",
+  "F[0].Page_1[0].RadioButtonList[2]": "<%= form.data.dig('veteran_id', 'va_file_number') ? 1 : 2 %>",
 
-  "F[0].#subform[1].PENSION[0]": "<%= data.dig('benefit_selection', 'pension') ? 1 : 0 %>",
-  "F[0].#subform[1].COMPENSATION[0]": "<%= data.dig('benefit_selection', 'compensation') ? 1 : 0 %>",
-  "F[0].#subform[1].SURVIVORS_PENSION_AND_OR_DEPENDENCY_AND_INDEMNITY_COMPENSATION_DIC[0]": "<%= data.dig('benefit_selection', 'survivor') ? 1 : 0 %>",
+  "F[0].#subform[1].PENSION[0]": "<%= form.data.dig('benefit_selection', 'pension') ? 1 : 0 %>",
+  "F[0].#subform[1].COMPENSATION[0]": "<%= form.data.dig('benefit_selection', 'compensation') ? 1 : 0 %>",
+  "F[0].#subform[1].SURVIVORS_PENSION_AND_OR_DEPENDENCY_AND_INDEMNITY_COMPENSATION_DIC[0]": "<%= form.data.dig('benefit_selection', 'survivor') ? 1 : 0 %>",
   "F[0].#subform[1].SignatureField1[0]": "",
   "F[0].#subform[1].Date_Signed_Year[0]": "<%= Time.current.in_time_zone('America/Chicago').strftime('%Y') %>",
   "F[0].#subform[1].Date_Signed_Day[0]": "<%= Time.current.in_time_zone('America/Chicago').strftime('%d') %>",
   "F[0].#subform[1].Date_Signed_Month[0]": "<%= Time.current.in_time_zone('America/Chicago').strftime('%m') %>",
-  "F[0].#subform[1].Name_Of_Attorney_Agent_Or_Veterans_Service_Organization_VS[0]": "<%= (data.dig('third_party_preparer_full_name', 'first') || '') + ' ' + (data.dig('third_party_preparer_full_name', 'middle') || '') + ' ' + (data.dig('third_party_preparer_full_name', 'last') || '') + ', ' + (data['third_party_preparer_role'] == 'other' ? (data['other_third_party_preparer_role'] || '') : data['third_party_preparer_role'] || '') %>",
-  "F[0]": "<%= data.dig('F') %>"
+  "F[0].#subform[1].Name_Of_Attorney_Agent_Or_Veterans_Service_Organization_VS[0]": "<%= form.third_party_info %>",
+  "F[0]": "<%= form.data.dig('F') %>"
 }
