--- a/modules/simple_forms_api/app/form_mappings/vba_26_4555.json.erb
+++ b/modules/simple_forms_api/app/form_mappings/vba_26_4555.json.erb
@@ -1,25 +1,25 @@
 {
-  "F[0].Page_1[0].JF01[0]":          "<%= data.dig('veteran', 'full_name', 'first') %> - <%= data.dig('veteran', 'full_name', 'middle') %> - <%= data.dig('veteran', 'full_name', 'last') %> <%= data.dig('veteran', 'full_name', 'suffix') %>",
-  "F[0].Page_1[0].SSN[0]":           "<%= data.dig('veteran', 'ssn') %>",
-  "F[0].Page_1[0].JF02[0]":          "<%= data.dig('veteran', 'va_file_number') %>",
-  "F[0].Page_1[0].Date_Of_Birth[0]": "<%= data.dig('veteran', 'date_of_birth') %>",
-  "F[0].Page_1[0].JF03[0]":          "<%= data.dig('veteran', 'email') %>",
-  "F[0].Page_1[0].JF04[0]":          "<%= data.dig('veteran', 'address', 'street') %> <%= data.dig('veteran', 'address', 'street2') %> <%= data.dig('veteran', 'address', 'street3') %> <%= data.dig('veteran', 'address', 'city') %>, <%= data.dig('veteran', 'address', 'state') %> <%= data.dig('veteran', 'address', 'postal_code') %>",
-  "F[0].Page_1[0].JF05[0]":          "<%= data.dig('previous_sah_application', 'previous_sah_application_address', 'street') %> <%= data.dig('previous_sah_application', 'previous_sah_application_address', 'street2') %> <%= data.dig('previous_sah_application', 'previous_sah_application_address', 'city') %>, <%= data.dig('previous_sah_application', 'previous_sah_application_address', 'state') %> <%= data.dig('previous_sah_application', 'previous_sah_application_address', 'postal_code') %>",
-  "F[0].Page_1[0].JF06[0]":          "<%= data.dig('previous_hi_application', 'previous_hi_application_address', 'street') %> <%= data.dig('previous_hi_application', 'previous_hi_application_address', 'street2') %> <%= data.dig('previous_hi_application', 'previous_hi_application_address', 'city') %>, <%= data.dig('previous_hi_application', 'previous_hi_application_address', 'state') %> <%= data.dig('previous_hi_application', 'previous_hi_application_address', 'postal_code') %>",
-  "F[0].Page_1[0].JF07[0]":          "<%= data.dig('living_situation', 'care_facility_name') %> <%= data.dig('living_situation', 'care_facility_address', 'street') %> <%= data.dig('living_situation', 'care_facility_address', 'street2') %> <%= data.dig('living_situation', 'care_facility_address', 'city') %>, <%= data.dig('living_situation', 'care_facility_address', 'state') %> <%= data.dig('living_situation', 'care_facility_address', 'postal_code') %>",
-  "F[0].Page_1[0].JF08[0]":          "<%= data.dig('remarks') %>",
+  "F[0].Page_1[0].JF01[0]":          "<%= form.data.dig('veteran', 'full_name', 'first') %> - <%= form.data.dig('veteran', 'full_name', 'middle') %> - <%= form.data.dig('veteran', 'full_name', 'last') %> <%= form.data.dig('veteran', 'full_name', 'suffix') %>",
+  "F[0].Page_1[0].SSN[0]":           "<%= form.data.dig('veteran', 'ssn') %>",
+  "F[0].Page_1[0].JF02[0]":          "<%= form.data.dig('veteran', 'va_file_number') %>",
+  "F[0].Page_1[0].Date_Of_Birth[0]": "<%= form.data.dig('veteran', 'date_of_birth') %>",
+  "F[0].Page_1[0].JF03[0]":          "<%= form.data.dig('veteran', 'email') %>",
+  "F[0].Page_1[0].JF04[0]":          "<%= form.data.dig('veteran', 'address', 'street') %> <%= form.data.dig('veteran', 'address', 'street2') %> <%= form.data.dig('veteran', 'address', 'street3') %> <%= form.data.dig('veteran', 'address', 'city') %>, <%= form.data.dig('veteran', 'address', 'state') %> <%= form.data.dig('veteran', 'address', 'postal_code') %>",
+  "F[0].Page_1[0].JF05[0]":          "<%= form.data.dig('previous_sah_application', 'previous_sah_application_address', 'street') %> <%= form.data.dig('previous_sah_application', 'previous_sah_application_address', 'street2') %> <%= form.data.dig('previous_sah_application', 'previous_sah_application_address', 'city') %>, <%= form.data.dig('previous_sah_application', 'previous_sah_application_address', 'state') %> <%= form.data.dig('previous_sah_application', 'previous_sah_application_address', 'postal_code') %>",
+  "F[0].Page_1[0].JF06[0]":          "<%= form.data.dig('previous_hi_application', 'previous_hi_application_address', 'street') %> <%= form.data.dig('previous_hi_application', 'previous_hi_application_address', 'street2') %> <%= form.data.dig('previous_hi_application', 'previous_hi_application_address', 'city') %>, <%= form.data.dig('previous_hi_application', 'previous_hi_application_address', 'state') %> <%= form.data.dig('previous_hi_application', 'previous_hi_application_address', 'postal_code') %>",
+  "F[0].Page_1[0].JF07[0]":          "<%= form.data.dig('living_situation', 'care_facility_name') %> <%= form.data.dig('living_situation', 'care_facility_address', 'street') %> <%= form.data.dig('living_situation', 'care_facility_address', 'street2') %> <%= form.data.dig('living_situation', 'care_facility_address', 'city') %>, <%= form.data.dig('living_situation', 'care_facility_address', 'state') %> <%= form.data.dig('living_situation', 'care_facility_address', 'postal_code') %>",
+  "F[0].Page_1[0].JF08[0]":          "<%= form.data.dig('remarks') %>",
 
-  "F[0].Page_1[0].TELEPHONE01[0]": "<%= data.dig('veteran', 'home_phone') %>",
-  "F[0].Page_1[0].TELEPHONE02[0]": "<%= data.dig('veteran', 'home_phone') %>",
-  "F[0].Page_1[0].TELEPHONE03[0]": "<%= data.dig('veteran', 'mobile_phone') %>",
+  "F[0].Page_1[0].TELEPHONE01[0]": "<%= form.data.dig('veteran', 'home_phone') %>",
+  "F[0].Page_1[0].TELEPHONE02[0]": "<%= form.data.dig('veteran', 'home_phone') %>",
+  "F[0].Page_1[0].TELEPHONE03[0]": "<%= form.data.dig('veteran', 'mobile_phone') %>",
 
-  "F[0].Page_1[0].RadioButtonList[0]": "<%= data.dig('previous_sah_application', 'has_previous_sah_application') == true ? 1 : 2 %>",
-  "F[0].Page_1[0].RadioButtonList[1]": "<%= data.dig('previous_hi_application', 'has_previous_hi_application') == true ? 1 : 2 %>",
-  "F[0].Page_1[0].RadioButtonList[2]": "<%= data.dig('living_situation', 'is_in_care_facility') == true ? 1 : 2 %>",
+  "F[0].Page_1[0].RadioButtonList[0]": "<%= form.data.dig('previous_sah_application', 'has_previous_sah_application') == true ? 1 : 2 %>",
+  "F[0].Page_1[0].RadioButtonList[1]": "<%= form.data.dig('previous_hi_application', 'has_previous_hi_application') == true ? 1 : 2 %>",
+  "F[0].Page_1[0].RadioButtonList[2]": "<%= form.data.dig('living_situation', 'is_in_care_facility') == true ? 1 : 2 %>",
 
-  "F[0].Page_1[0].Date02[0]": "<%= data.dig('previous_sah_application', 'previous_sah_application_date') %>",
-  "F[0].Page_1[0].Date03[0]": "<%= data.dig('previous_hi_application', 'previous_hi_application_date') %>",
+  "F[0].Page_1[0].Date02[0]": "<%= form.data.dig('previous_sah_application', 'previous_sah_application_date') %>",
+  "F[0].Page_1[0].Date03[0]": "<%= form.data.dig('previous_hi_application', 'previous_hi_application_date') %>",
   "F[0].Page_1[0].Date05[0]": "<%= Time.current.in_time_zone('America/Chicago').strftime('%m/%d/%Y') %>",
-  "F[0].Page_1[0].Signature[0]": "<%= data['statement_of_truth_signature'] %>"
+  "F[0].Page_1[0].Signature[0]": "<%= form.data['statement_of_truth_signature'] %>"
 }
