API-32268: Benefits Intake monthly report bug fixes and adding specs

--- a/modules/vba_documents/app/views/vba_documents/monthly_report_mailer/monthly_report.html.erb
+++ b/modules/vba_documents/app/views/vba_documents/monthly_report_mailer/monthly_report.html.erb
@@ -75,7 +75,7 @@
       <tr>
         <td><%= month_stats.year %></td>
         <td><%= Date::MONTHNAMES[month_stats.month] %></td>
-        <td style="text-align: right"><%= month_stats.stats['page_count_stats']['total'] %></td>
+        <td style="text-align: right"><%= month_stats.stats['summary_stats']['total'] %></td>
         <td style="text-align: right"><%= month_stats.stats['page_count_stats']['maximum'] %></td>
         <td style="text-align: right"><%= month_stats.stats['page_count_stats']['average'] %></td>
         <td style="text-align: right"><%= month_stats.stats['page_count_stats']['median'] %></td>
