--- a/modules/simple_forms_api/app/form_mappings/vba_40_10007.json.erb
+++ b/modules/simple_forms_api/app/form_mappings/vba_40_10007.json.erb
@@ -1,3 +1,3 @@
 {
-  "form1[0].#subform[0].TextField1[0]": "<%= data.dig('name', 'first') + ' ' + (data.dig('name', 'middle') || '') + ' ' + data.dig('name', 'last') %>"
+  "form1[0].#subform[0].TextField1[0]": "<%= data.dig('application', 'applicant', 'name', 'first') + ' ' + (data.dig('application', 'applicant', 'name', 'middle') || '') + ' ' + data.dig('application', 'applicant', 'name', 'last') %>"
 }
