--- a/modules/simple_forms_api/app/form_mappings/vba_40_10007.json.erb
+++ b/modules/simple_forms_api/app/form_mappings/vba_40_10007.json.erb
@@ -54,14 +54,14 @@
   "F[0].Page_1[0].Field13[25]": "<%= (form.data.dig('application', 'has_currently_buried')) == '1' ? 1 : 0%>",
   "F[0].Page_1[0].Field13[26]": "<%= (form.data.dig('application', 'has_currently_buried')) == '2' ? 1 : 0%>",
   "F[0].Page_1[0].Field12[0]": "<%= (form.data.dig('application', 'has_currently_buried')) == '3' ? 1 : 1%>",
-  "F[0].Page_1[0].Field8[0]": "<%= form.currently_buried(0, 'first') +" "+form.currently_buried(0, 'last')+(", "+form.currently_buried(1, 'first'))+" "+form.currently_buried(1, 'last')%>",
+  "F[0].Page_1[0].Field8[0]": "<%= form.data.dig('application', 'claimant', 'desired_cemetery', 'id')+" "+form.data.dig('application', 'claimant', 'desired_cemetery', 'label') %>",
   "F[0].Page_1[0].Field13[27]": "<%= form.data.dig('Field13') %>",
   "F[0].Page_1[0].Field13[28]": "<%= form.data.dig('Field13') %>",
   "F[0].Page_1[0].Field16[6]": "<%= form.data.dig('application', 'claimant', 'name', 'last')+", "+form.data.dig('application', 'claimant', 'name', 'first')+((", "+form.data.dig('application', 'claimant', 'name', 'middle')) || '')+((" "+form.data.dig('application', 'claimant', 'name', 'suffix')) || '') %>",
-  "F[0].Page_1[0].Field12[1]": "<%= (form.data.dig('application', 'claimant', 'relationship_to_vet') == '1') ? 1 : 0%>",
-  "F[0].Page_1[0].Field12[2]": "<%= (form.data.dig('application', 'claimant', 'relationship_to_vet') == '2') ? 1 : 0%>",
-  "F[0].Page_1[0].Field12[3]": "<%= (form.data.dig('application', 'claimant', 'relationship_to_vet') == '3') ? 1 : 0%>",
-  "F[0].Page_1[0].Field12[4]": "<%= (form.data.dig('application', 'claimant', 'relationship_to_vet') == '4') ? 1 : 0%>",
+  "F[0].Page_1[0].Field12[1]": "<%= form.data.dig('Field12') %>",
+  "F[0].Page_1[0].Field12[2]": "<%= form.data.dig('Field12') %>",
+  "F[0].Page_1[0].Field12[3]": "<%= form.data.dig('Field12') %>",
+  "F[0].Page_1[0].Field12[4]": "<%= form.data.dig('Field12') %>",
   "F[0].Page_1[0].Field16[7]": "<%= form.data.dig('Field16') %>",
   "F[0].Page_1[0].Field16[8]": "<%= form.data.dig('application', 'applicant', 'mailing_address', 'street') + ' ' + form.data.dig('application', 'applicant', 'mailing_address', 'street2') + ' '+ form.data.dig('application', 'applicant', 'mailing_address', 'city')+ ', ' + form.data.dig('application', 'applicant', 'mailing_address', 'state') +' '+ form.data.dig('application', 'applicant', 'mailing_address', 'postal_code') %>",
   "F[0].Page_1[0].Field11[0]": "<%= form.data.dig('application', 'claimant', 'phone_number') %>",
@@ -69,14 +69,14 @@
   "F[0].Page_1[0].Field9[2]": "<%= form.data.dig('application', 'claimant','date_of_birth') %>",
   "F[0].Page_1[0].Field11[1]": "<%= form.data.dig('application', 'claimant','name', 'maiden') %>",
   "F[0].Page_1[0].Field8[1]": "<%= form.data.dig('application', 'claimant', 'desired_cemetery', 'id')+" "+form.data.dig('application', 'claimant', 'desired_cemetery', 'label') %>",
-  "F[0].Page_1[0].Field8[2]": "<%= form.data.dig('application', 'claimant', 'email') %>",
-  "F[0].#subform[1].Field11[0]": "<%= "Signature" %>",
-  "F[0].#subform[1].Field30[0]": "<%= Time.current.in_time_zone('America/Chicago').strftime('%m/%d/%Y') %>",
-  "F[0].#subform[1].Field12[0]": "<%= (form.data.dig('application', 'applicant', 'applicant_relationship_to_claimant') == 'Self') ? 1 : 0%>",
-  "F[0].#subform[1].Field12[1]": "<%= (form.data.dig('application', 'applicant', 'applicant_relationship_to_claimant') == 'Authorized Agent/Rep') ? 1 : 0%>",
-  "F[0].#subform[1].Field11[1]": "<%= form.data.dig('application', 'applicant', 'name', 'last')+", "+form.data.dig('application', 'applicant', 'name', 'first') %>",
-  "F[0].#subform[1].Field16[0]": "<%= form.data.dig('application', 'applicant', 'mailing_address', 'street') + ' ' + form.data.dig('application', 'applicant', 'mailing_address', 'street2') + ' '+ form.data.dig('application', 'applicant', 'mailing_address', 'city')+ ', ' + form.data.dig('application', 'applicant', 'mailing_address', 'state') +' '+ form.data.dig('application', 'applicant', 'mailing_address', 'postal_code') %>",
-  "F[0].#subform[1].Field11[2]": "<%= form.data.dig('application', 'applicant', 'applicant_phone_number') %>",
-  "F[0].#subform[1].Field8[0]": "<%= form.data.dig('application', 'applicant', 'applicant_email') %>",
+  "F[0].Page_1[0].Field8[2]": "<%= form.data.dig('Field8') %>",
+  "F[0].#subform[1].Field11[0]": "<%= form.data.dig('Field11') %>",
+  "F[0].#subform[1].Field30[0]": "<%= form.data.dig('Field30') %>",
+  "F[0].#subform[1].Field12[0]": "<%= form.data.dig('Field12') %>",
+  "F[0].#subform[1].Field12[1]": "<%= form.data.dig('Field12') %>",
+  "F[0].#subform[1].Field11[1]": "<%= form.data.dig('Field11') %>",
+  "F[0].#subform[1].Field16[0]": "<%= form.data.dig('Field16') %>",
+  "F[0].#subform[1].Field11[2]": "<%= form.data.dig('Field11') %>",
+  "F[0].#subform[1].Field8[0]": "<%= form.data.dig('Field8') %>",
   "F[0]": "<%= form.data.dig('F') %>"
 }
