Update controller template to add service_tag stub (#14800)
* Update controller template to add service_tag stub

* Update controller.rb.erb

--- a/lib/generators/module_component/templates/app/controllers/controller.rb.erb
+++ b/lib/generators/module_component/templates/app/controllers/controller.rb.erb
@@ -3,6 +3,10 @@
 module <%= class_name %>
   module V0
     class <%= @comp_name.camelize %>Controller < ApplicationController
+      # Replace SERVICE_NAME with your application's service name in the Datadog Service Catalog
+      # This is the dd-service property for your application here: https://github.com/department-of-veterans-affairs/vets-api/tree/master/datadog-service-catalog
+      service_tag 'SERVICE_NAME'
+
       def index
         message = service.get_message
         render json: <%= class_name %>Serializer.new(message).serialized_json
