--- a/modules/simple_forms_api/app/form_mappings/vha_10_10d.json.erb
+++ b/modules/simple_forms_api/app/form_mappings/vha_10_10d.json.erb
@@ -1,74 +1,74 @@
 {
-  "form1[0].#subform[0].VeteransLastName[0]":            "<%= form.data.dig('VeteransLastName') %>",
-  "form1[0].#subform[0].VeteransFirstName[0]":           "<%= form.data.dig('VeteransFirstName') %>",
-  "form1[0].#subform[0].VeteransMI[0]":                  "<%= form.data.dig('VeteransMI') %>",
-  "form1[0].#subform[0].VeteransSSN[0]":                 "<%= form.data.dig('VeteransSSN') %>",
-  "form1[0].#subform[0].VAFileNumber[0]":                "<%= form.data.dig('VAFileNumber') %>",
-  "form1[0].#subform[0].VeteransStreetAddress[0]":       "<%= form.data.dig('VeteransStreetAddress') %>",
-  "form1[0].#subform[0].VeteransState[0]":               "<%= form.data.dig('VeteransState') %>",
-  "form1[0].#subform[0].VeteransCity[0]":                "<%= form.data.dig('VeteransCity') %>",
-  "form1[0].#subform[0].VeteransZipCode[0]":             "<%= form.data.dig('VeteransZipCode') %>",
-  "form1[0].#subform[0].VeteransPhoneNumber[0]":         "<%= form.data.dig('VeteransPhoneNumber') %>",
-  "form1[0].#subform[0].VeteransDateOfBirth[0]":         "<%= form.data.dig('VeteransDateOfBirth') %>",
-  "form1[0].#subform[0].VeteransDateOfMarriage[0]":      "<%= form.data.dig('VeteransDateOfMarriage') %>",
-  "form1[0].#subform[0].IsTheVeteranDeceased[0]":        "<%= form.data.dig('IsTheVeteranDeceased') ? 1 : 0  %>",
-  "form1[0].#subform[0].VeteransDateOfDeath[0]":         "<%= form.data.dig('VeteransDateOfDeath') %>",
-  "form1[0].#subform[0].DieOnActiveMilitaryService[0]":  "<%= form.data.dig('DieOnActiveMilitaryService') ? 1 : 0  %>",
-  "form1[0].#subform[0].LastName1[0]":                   "<%= form.data.dig('LastName1') %>",
-  "form1[0].#subform[0].FirstName1[0]":                  "<%= form.data.dig('FirstName1') %>",
-  "form1[0].#subform[0].MI1[0]":                         "<%= form.data.dig('MI1') %>",
-  "form1[0].#subform[0].SSN1[0]":                        "<%= form.data.dig('SSN1') %>",
-  "form1[0].#subform[0].StreetAddress1[0]":              "<%= form.data.dig('StreetAddress1') %>",
-  "form1[0].#subform[0].City1[0]":                       "<%= form.data.dig('City1') %>",
-  "form1[0].#subform[0].ZipCode1[0]":                    "<%= form.data.dig('ZipCode1') %>",
-  "form1[0].#subform[0].DateOfBirth1[0]":                "<%= form.data.dig('DateOfBirth1') %>",
-  "form1[0].#subform[0].EmailAddress1[0]":               "<%= form.data.dig('EmailAddress1') %>",
-  "form1[0].#subform[0].PhoneNumber1[0]":                "<%= form.data.dig('PhoneNumber1') %>",
-  "form1[0].#subform[0].Gender1[0]":                     "<%= form.data.dig('Gender1') ? 1 : 0 %>",
-  "form1[0].#subform[0].EnrolledMedicare[0]":            "<%= form.data.dig('EnrolledMedicare1') ? 1 : 0  %>",
-  "form1[0].#subform[0].HasOtherInsurance[0]":           "<%= form.data.dig('HasOtherInsurance1') ? 1 : 0  %>",
-  "form1[0].#subform[0].RelationshipToVeteran1[0]":      "<%= form.data.dig('RelationshipToVeteran1') %>",
-  "form1[0].#subform[0].State1[0]":                      "<%= form.data.dig('State1') %>",
-  "form1[0].#subform[0].LastName2[0]":                   "<%= form.data.dig('LastName2') %>",
-  "form1[0].#subform[0].FirstName2[0]":                  "<%= form.data.dig('FirstName2') %>",
-  "form1[0].#subform[0].MI2[0]":                         "<%= form.data.dig('MI2') %>",
-  "form1[0].#subform[0].SSN2[0]":                        "<%= form.data.dig('SSN2') %>",
-  "form1[0].#subform[0].StreetAddress2[0]":              "<%= form.data.dig('StreetAddress2') %>",
-  "form1[0].#subform[0].City2[0]":                       "<%= form.data.dig('City2') %>",
-  "form1[0].#subform[0].ZipCode2[0]":                    "<%= form.data.dig('ZipCode2') %>",
-  "form1[0].#subform[0].DateOfBirth2[0]":                "<%= form.data.dig('DateOfBirth2') %>",
-  "form1[0].#subform[0].EmailAddress2[0]":               "<%= form.data.dig('EmailAddress2') %>",
-  "form1[0].#subform[0].PhoneNumber2[0]":                "<%= form.data.dig('PhoneNumber2') %>",
-  "form1[0].#subform[0].Gender2[0]":                     "<%= form.data.dig('Gender2') ? 1 : 0 %>",
-  "form1[0].#subform[0].EnrolledMedicare[1]":            "<%= form.data.dig('EnrolledMedicare2') ? 1 : 0  %>",
-  "form1[0].#subform[0].HasOtherInsurance[1]":           "<%= form.data.dig('HasOtherInsurance2') ? 1 : 0  %>",
-  "form1[0].#subform[0].RelationshipToVeteran2[0]":      "<%= form.data.dig('RelationshipToVeteran2') %>",
-  "form1[0].#subform[0].State2[0]":                      "<%= form.data.dig('State2') %>",
-  "form1[0].#subform[0].LastName3[0]":                   "<%= form.data.dig('LastName3') %>",
-  "form1[0].#subform[0].FirstName3[0]":                  "<%= form.data.dig('FirstName3') %>",
-  "form1[0].#subform[0].MI3[0]":                         "<%= form.data.dig('MI3') %>",
-  "form1[0].#subform[0].SSN3[0]":                        "<%= form.data.dig('SSN3') %>",
-  "form1[0].#subform[0].StreetAddress3[0]":              "<%= form.data.dig('StreetAddress3') %>",
-  "form1[0].#subform[0].City3[0]":                       "<%= form.data.dig('City3') %>",
-  "form1[0].#subform[0].ZipCode3[0]":                    "<%= form.data.dig('ZipCode3') %>",
-  "form1[0].#subform[0].DateOfBirth3[0]":                "<%= form.data.dig('DateOfBirth3') %>",
-  "form1[0].#subform[0].EmailAddress3[0]":               "<%= form.data.dig('EmailAddress3') %>",
-  "form1[0].#subform[0].PhoneNumber3[0]":                "<%= form.data.dig('PhoneNumber3') %>",
-  "form1[0].#subform[0].Gender3[0]":                     "<%= form.data.dig('Gender3') ? 1 : 0 %>",
-  "form1[0].#subform[0].EnrolledMedicare[2]":            "<%= form.data.dig('EnrolledMedicare3') ? 1 : 0 %>",
-  "form1[0].#subform[0].HasOtherInsurance[2]":           "<%= form.data.dig('HasOtherInsurance3') ? 1 : 0 %>",
-  "form1[0].#subform[0].RelationshipToVeteran3[0]":      "<%= form.data.dig('RelationshipToVeteran3') %>",
-  "form1[0].#subform[0].State3[0]":                      "<%= form.data.dig('State3') %>",
-  "form1[0].#subform[0].DateSigned[0]":                  "<%= Time.current.in_time_zone('America/Chicago').strftime('%m/%d/%Y') %>",
-  "form1[0].#subform[0].SignatureField11[0]":            "<%= form.data.dig('SignatureField11') %>",
-  "form1[0].#subform[0].LastName4[0]":                   "<%= form.data.dig('LastName4') %>",
-  "form1[0].#subform[0].FirstName4[0]":                  "<%= form.data.dig('FirstName4') %>",
-  "form1[0].#subform[0].MI4[0]":                         "<%= form.data.dig('MI4') %>",
-  "form1[0].#subform[0].StreetAddress4[0]":              "<%= form.data.dig('StreetAddress4') %>",
-  "form1[0].#subform[0].City4[0]":                       "<%= form.data.dig('City4') %>",
-  "form1[0].#subform[0].ZipCode4[0]":                    "<%= form.data.dig('ZipCode4') %>",
-  "form1[0].#subform[0].State4[0]":                      "<%= form.data.dig('State4') %>",
-  "form1[0].#subform[0].RelationshipToApplicants[0]":    "<%= form.data.dig('RelationshipToApplicants') %>",
-  "form1[0].#subform[0].PhoneNumber4[0]":                "<%= form.data.dig('PhoneNumber4') %>",
+  "form1[0].#subform[0].VeteransLastName[0]":            "<%= form.data.dig('veteran', 'full_name', 'last') %>",
+  "form1[0].#subform[0].VeteransFirstName[0]":           "<%= form.data.dig('veteran', 'full_name', 'first') %>",
+  "form1[0].#subform[0].VeteransMI[0]":                  "<%= form.data.dig('veteran', 'full_name', 'middle') %>",
+  "form1[0].#subform[0].VeteransSSN[0]":                 "<%= form.data.dig('veteran', 'ssn_or_tin') %>",
+  "form1[0].#subform[0].VAFileNumber[0]":                "<%= form.data.dig('veteran', 'va_claim_number') %>",
+  "form1[0].#subform[0].VeteransStreetAddress[0]":       "<%= form.data.dig('veteran', 'address', 'street') %>",
+  "form1[0].#subform[0].VeteransState[0]":               "<%= form.data.dig('veteran', 'address', 'state') %>",
+  "form1[0].#subform[0].VeteransCity[0]":                "<%= form.data.dig('veteran', 'address', 'city') %>",
+  "form1[0].#subform[0].VeteransZipCode[0]":             "<%= form.data.dig('veteran', 'address', 'postal_code') %>",
+  "form1[0].#subform[0].VeteransPhoneNumber[0]":         "<%= form.data.dig('veteran', 'phone_number') %>",
+  "form1[0].#subform[0].VeteransDateOfBirth[0]":         "<%= form.data.dig('veteran', 'date_of_birth') %>",
+  "form1[0].#subform[0].VeteransDateOfMarriage[0]":      "<%= form.data.dig('veteran', 'date_of_marriage') %>",
+  "form1[0].#subform[0].IsTheVeteranDeceased[0]":        "<%= form.data.dig('veteran', 'is_deceased') ? 1 : 0  %>",
+  "form1[0].#subform[0].VeteransDateOfDeath[0]":         "<%= form.data.dig('veteran', 'date_of_death') %>",
+  "form1[0].#subform[0].DieOnActiveMilitaryService[0]":  "<%= form.data.dig('veteran', 'is_active_service_death') ? 1 : 0  %>",
+  "form1[0].#subform[0].LastName1[0]":                   "<%= form.data['applicants'][0]&.dig('full_name', 'last') %>",
+  "form1[0].#subform[0].FirstName1[0]":                  "<%= form.data['applicants'][0]&.dig('full_name', 'first') %>",
+  "form1[0].#subform[0].MI1[0]":                         "<%= form.data['applicants'][0]&.dig('full_name', 'middle') %>",
+  "form1[0].#subform[0].SSN1[0]":                        "<%= form.data['applicants'][0]&.dig('ssn_or_tin') %>",
+  "form1[0].#subform[0].StreetAddress1[0]":              "<%= form.data['applicants'][0]&.dig('address', 'street') %>",
+  "form1[0].#subform[0].City1[0]":                       "<%= form.data['applicants'][0]&.dig('address', 'city') %>",
+  "form1[0].#subform[0].ZipCode1[0]":                    "<%= form.data['applicants'][0]&.dig('address', 'postal_code') %>",
+  "form1[0].#subform[0].DateOfBirth1[0]":                "<%= form.data['applicants'][0]&.dig('date_of_birth') %>",
+  "form1[0].#subform[0].EmailAddress1[0]":               "<%= form.data['applicants'][0]&.dig('email') %>",
+  "form1[0].#subform[0].PhoneNumber1[0]":                "<%= form.data['applicants'][0]&.dig('phone_number') %>",
+  "form1[0].#subform[0].Gender1[0]":                     "<%= form.data['applicants'][0]&.dig('gender') ? 1 : 0 %>",
+  "form1[0].#subform[0].EnrolledMedicare[0]":            "<%= form.data['applicants'][0]&.dig('is_enrolled_in_medicare') ? 1 : 0  %>",
+  "form1[0].#subform[0].HasOtherInsurance[0]":           "<%= form.data['applicants'][0]&.dig('has_other_health_insurance') ? 1 : 0  %>",
+  "form1[0].#subform[0].RelationshipToVeteran1[0]":      "<%= form.data['applicants'][0]&.dig('vet_relationship') %>",
+  "form1[0].#subform[0].State1[0]":                      "<%= form.data['applicants'][0]&.dig('address', 'state') %>",
+  "form1[0].#subform[0].LastName2[0]":                   "<%= form.data['applicants'][1]&.dig('full_name', 'last') %>",
+  "form1[0].#subform[0].FirstName2[0]":                  "<%= form.data['applicants'][1]&.dig('full_name', 'first') %>",
+  "form1[0].#subform[0].MI2[0]":                         "<%= form.data['applicants'][1]&.dig('full_name', 'middle') %>",
+  "form1[0].#subform[0].SSN2[0]":                        "<%= form.data['applicants'][1]&.dig('ssn_or_tin') %>",
+  "form1[0].#subform[0].StreetAddress2[0]":              "<%= form.data['applicants'][1]&.dig('address', 'street') %>",
+  "form1[0].#subform[0].City2[0]":                       "<%= form.data['applicants'][1]&.dig('address', 'city') %>",
+  "form1[0].#subform[0].ZipCode2[0]":                    "<%= form.data['applicants'][1]&.dig('address', 'postal_code') %>",
+  "form1[0].#subform[0].DateOfBirth2[0]":                "<%= form.data['applicants'][1]&.dig('date_of_birth')  %>",
+  "form1[0].#subform[0].EmailAddress2[0]":               "<%= form.data['applicants'][1]&.dig('email') %>",
+  "form1[0].#subform[0].PhoneNumber2[0]":                "<%= form.data['applicants'][1]&.dig('phone_number') %>",
+  "form1[0].#subform[0].Gender2[0]":                     "<%= form.data['applicants'][1]&.dig('gender') ? 1 : 0 %>",
+  "form1[0].#subform[0].EnrolledMedicare[1]":            "<%= form.data['applicants'][1]&.dig('is_enrolled_in_medicare') ? 1 : 0  %>",
+  "form1[0].#subform[0].HasOtherInsurance[1]":           "<%= form.data['applicants'][1]&.dig('has_other_health_insurance') ? 1 : 0  %>",
+  "form1[0].#subform[0].RelationshipToVeteran2[0]":      "<%= form.data['applicants'][1]&.dig('vet_relationship') %>",
+  "form1[0].#subform[0].State2[0]":                      "<%= form.data['applicants'][1]&.dig('address', 'state') %>",
+  "form1[0].#subform[0].LastName3[0]":                   "<%= form.data['applicants'][2]&.dig('full_name', 'last') %>",
+  "form1[0].#subform[0].FirstName3[0]":                  "<%= form.data['applicants'][2]&.dig('full_name', 'first') %>",
+  "form1[0].#subform[0].MI3[0]":                         "<%= form.data['applicants'][2]&.dig('full_name', 'middle') %>",
+  "form1[0].#subform[0].SSN3[0]":                        "<%= form.data['applicants'][2]&.dig('ssn_or_tin') %>",
+  "form1[0].#subform[0].StreetAddress3[0]":              "<%= form.data['applicants'][2]&.dig('address', 'street') %>",
+  "form1[0].#subform[0].City3[0]":                       "<%= form.data['applicants'][2]&.dig('address', 'city') %>",
+  "form1[0].#subform[0].ZipCode3[0]":                    "<%= form.data['applicants'][2]&.dig('address', 'postal_code') %>",
+  "form1[0].#subform[0].DateOfBirth3[0]":                "<%= form.data['applicants'][2]&.dig('date_of_birth')  %>",
+  "form1[0].#subform[0].EmailAddress3[0]":               "<%= form.data['applicants'][2]&.dig('email') %>",
+  "form1[0].#subform[0].PhoneNumber3[0]":                "<%= form.data['applicants'][2]&.dig('phone_number') %>",
+  "form1[0].#subform[0].Gender3[0]":                     "<%= form.data['applicants'][2]&.dig('gender') ? 1 : 0 %>",
+  "form1[0].#subform[0].EnrolledMedicare[2]":            "<%= form.data['applicants'][2]&.dig('is_enrolled_in_medicare') ? 1 : 0  %>",
+  "form1[0].#subform[0].HasOtherInsurance[2]":           "<%= form.data['applicants'][2]&.dig('has_other_health_insurance') ? 1 : 0  %>",
+  "form1[0].#subform[0].RelationshipToVeteran3[0]":      "<%= form.data['applicants'][2]&.dig('vet_relationship') %>",
+  "form1[0].#subform[0].State3[0]":                      "<%= form.data['applicants'][2]&.dig('address', 'state') %>",
+  "form1[0].#subform[0].DateSigned[0]":                  "<%= form.data.dig('certification', 'date') %>",
+  "form1[0].#subform[0].SignatureField11[0]":            "<%= form.data['statement_of_truth_signature'] %>",
+  "form1[0].#subform[0].LastName4[0]":                   "<%= form.data.dig('certification', 'lastName') %>",
+  "form1[0].#subform[0].FirstName4[0]":                  "<%= form.data.dig('certification', 'firstName') %>",
+  "form1[0].#subform[0].MI4[0]":                         "<%= form.data.dig('certification', 'middleInitial') %>",
+  "form1[0].#subform[0].StreetAddress4[0]":              "<%= form.data.dig('certification', 'streetAddress') %>",
+  "form1[0].#subform[0].City4[0]":                       "<%= form.data.dig('certification', 'city') %>",
+  "form1[0].#subform[0].ZipCode4[0]":                    "<%= form.data.dig('certification', 'postal_code') %>",
+  "form1[0].#subform[0].State4[0]":                      "<%= form.data.dig('certification', 'state') %>",
+  "form1[0].#subform[0].RelationshipToApplicants[0]":    "<%= form.data.dig('certification', 'relationship') %>",
+  "form1[0].#subform[0].PhoneNumber4[0]":                "<%= form.data.dig('certification', 'phone_number') %>",
   "form1[0]":                                            "<%= form.data.dig('form1') %>"
 }
